# lrGds_prj

./: README.md  pyproject.toml
lrGds_tools/: __main__.py
lrGds_tools/scripts/: lrGds_findtext.py  lrGds_renamebus.py  runner.py
